--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Aug 15 04:34:59 UTC 2025
+#Fri Aug 15 14:27:35 UTC 2025
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -25,6 +25,7 @@ initial-enabled-packs=vanilla
 level-name=Mata Tiru Tiru La
 level-seed=-5034
 level-type=minecraft\:normal
+max-build-height=500
 max-chained-neighbor-updates=1000000
 max-players=3
 max-tick-time=60000
